# srend

./: .gitignore  CMakeLists.txt  README.md  regenerate_projects.bat
scripts/: genie.lua  toolchain.lua
sources/: display.cpp  display.h  events.cpp  events.h  main.cpp  meshloader.cpp  meshloader.h  model_obj.cpp  model_obj.h  rasterizer.cpp  rasterizer.h  shading.h  tgaimage.cpp  tgaimage.h  timing.cpp  timing.h  vector.h
